logs/pocsuite.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pocsuite'...
Listing './lib/python3.5/site-packages/pocsuite/api'...
Compiling './lib/python3.5/site-packages/pocsuite/api/cannon.py'...
***   File "./lib/python3.5/site-packages/pocsuite/api/cannon.py", line 62
    except ImportError, ex:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocsuite/api/seebug.py'...
***   File "./lib/python3.5/site-packages/pocsuite/api/seebug.py", line 75
    print seebug.poc_search('redis')
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pocsuite/data'...
Listing './lib/python3.5/site-packages/pocsuite/lib'...
Listing './lib/python3.5/site-packages/pocsuite/lib/controller'...
Compiling './lib/python3.5/site-packages/pocsuite/lib/controller/controller.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/controller/controller.py", line 64
    print resultTable
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pocsuite/lib/core'...
Compiling './lib/python3.5/site-packages/pocsuite/lib/core/common.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/core/common.py", line 54
    exec code in mod.__dict__
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/pocsuite/lib/core/consoles.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/core/consoles.py", line 274
    print '[*] unload poc-{}: {}'.format(line, poc_name)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocsuite/lib/core/handlejson.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/core/handlejson.py", line 85
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocsuite/lib/core/log.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/core/log.py", line 40
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocsuite/lib/core/option.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/core/option.py", line 266
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocsuite/lib/core/poc.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/core/poc.py", line 67
    except NotImplementedError, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocsuite/lib/core/register.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/core/register.py", line 43
    except ImportError, ex:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocsuite/lib/core/threads.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/core/threads.py", line 47
    except threadError, errMsg:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pocsuite/lib/parse'...
Listing './lib/python3.5/site-packages/pocsuite/lib/request'...
Listing './lib/python3.5/site-packages/pocsuite/lib/utils'...
Compiling './lib/python3.5/site-packages/pocsuite/lib/utils/packet.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/utils/packet.py", line 59
    print 'socket.timeout:', e
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pocsuite/lib/utils/seebug.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/utils/seebug.py", line 86
    print s.search("redis")
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocsuite/lib/utils/zoomeye.py'...
***   File "./lib/python3.5/site-packages/pocsuite/lib/utils/zoomeye.py", line 89
    print z.search("port:80")
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pocsuite/pocsuite_cli.py'...
***   File "./lib/python3.5/site-packages/pocsuite/pocsuite_cli.py", line 196
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pocsuite/tests'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/ansistrm'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/argparse'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/colorama'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/odict'...
Compiling './lib/python3.5/site-packages/pocsuite/thirdparty/odict/odict.py'...
***   File "./lib/python3.5/site-packages/pocsuite/thirdparty/odict/odict.py", line 612
    raise TypeError, ('pop expected at most 2 arguments, got %s' %
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pocsuite/thirdparty/oset'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/prettytable'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/pyparsing'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/pyparsing/htmldoc'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/requests'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/requests/packages'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/socks'...
Listing './lib/python3.5/site-packages/pocsuite/thirdparty/termcolor'...
Listing './lib/python3.5/site-packages/pocsuite-2.0.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
